--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -1116,7 +1116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MAE(L1)Loss:"
+    "### MAE(L1)Loss function:"
    ]
   },
   {
