--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 01: Analysis different loss functions\n",
+    "# Assignment 01: Analysis of different loss functions\n",
     "In this Assignment, you will train a deep model on the CIFAR10 from the scratch using PyTorch."
    ]
   },
