--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,11 @@
     "import torchvision\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +85,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "torch.cuda.is_available()"
    ]
   },
   {
@@ -98,9 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "# cifar10 transform\n",
     "transform_cifar10_train = transforms.Compose([\n",
@@ -137,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +186,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ConvNet(\n",
+       "  (conv1): Conv2d(3, 4, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (conv2): Conv2d(4, 8, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (fc1): Linear(in_features=288, out_features=32, bias=True)\n",
+       "  (fc2): Linear(in_features=32, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = ConvNet()\n",
     "model.to(device)"
@@ -178,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,19 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "##################### Write your answer here ##################\n",
     "# Define the loss function\n",
-    "criterion = \n",
+    "\n",
+    "criterion =  nn.CrossEntropyLoss()\n",
     "###############################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +278,9 @@
     "    \"\"\"\n",
     "    \n",
     "    ##################### Write your answer here ##################\n",
-    "    output = \n",
-    "    loss = \n",
+    "    output = model(image)\n",
+    "    # Calculate the loss\n",
+    "    loss = criterion(output, target)\n",
     "    ###############################################################\n",
     "\n",
     "    return output, loss"
@@ -244,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,8 +308,8 @@
     "    \"\"\"\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    output = \n",
-    "    loss = \n",
+    "    output = model(image)\n",
+    "    loss = criterion(output, target)\n",
     "    ###############################################################\n",
     "\n",
     "    return output, loss"
@@ -280,15 +324,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/30 Train Loss: 0.0151 Acc: 0.2766\n",
+      "Begin test......\n",
+      "Test Loss: 0.0132 Acc: 0.3751\n",
+      "Epoch: 2/30 Train Loss: 0.0142 Acc: 0.3262\n",
+      "Begin test......\n",
+      "Test Loss: 0.0138 Acc: 0.3646\n",
+      "Epoch: 3/30 Train Loss: 0.0140 Acc: 0.3446\n",
+      "Begin test......\n",
+      "Test Loss: 0.0135 Acc: 0.3776\n",
+      "Epoch: 4/30 Train Loss: 0.0140 Acc: 0.3534\n",
+      "Begin test......\n",
+      "Test Loss: 0.0132 Acc: 0.4003\n",
+      "Epoch: 5/30 Train Loss: 0.0136 Acc: 0.3722\n",
+      "Begin test......\n",
+      "Test Loss: 0.0132 Acc: 0.3980\n",
+      "Epoch: 6/30 Train Loss: 0.0126 Acc: 0.4170\n",
+      "Begin test......\n",
+      "Test Loss: 0.0116 Acc: 0.4683\n",
+      "Epoch: 7/30 Train Loss: 0.0124 Acc: 0.4285\n",
+      "Begin test......\n",
+      "Test Loss: 0.0119 Acc: 0.4476\n",
+      "Epoch: 8/30 Train Loss: 0.0123 Acc: 0.4319\n",
+      "Begin test......\n",
+      "Test Loss: 0.0118 Acc: 0.4701\n",
+      "Epoch: 9/30 Train Loss: 0.0122 Acc: 0.4382\n",
+      "Begin test......\n",
+      "Test Loss: 0.0116 Acc: 0.4701\n",
+      "Epoch: 10/30 Train Loss: 0.0122 Acc: 0.4350\n",
+      "Begin test......\n",
+      "Test Loss: 0.0115 Acc: 0.4745\n",
+      "Epoch: 11/30 Train Loss: 0.0115 Acc: 0.4681\n",
+      "Begin test......\n",
+      "Test Loss: 0.0109 Acc: 0.5067\n",
+      "Epoch: 12/30 Train Loss: 0.0114 Acc: 0.4713\n",
+      "Begin test......\n",
+      "Test Loss: 0.0110 Acc: 0.4980\n",
+      "Epoch: 13/30 Train Loss: 0.0114 Acc: 0.4743\n",
+      "Begin test......\n",
+      "Test Loss: 0.0107 Acc: 0.5097\n",
+      "Epoch: 14/30 Train Loss: 0.0113 Acc: 0.4809\n",
+      "Begin test......\n",
+      "Test Loss: 0.0106 Acc: 0.5177\n",
+      "Epoch: 15/30 Train Loss: 0.0112 Acc: 0.4837\n",
+      "Begin test......\n",
+      "Test Loss: 0.0105 Acc: 0.5218\n",
+      "Epoch: 16/30 Train Loss: 0.0109 Acc: 0.4981\n",
+      "Begin test......\n",
+      "Test Loss: 0.0102 Acc: 0.5392\n",
+      "Epoch: 17/30 Train Loss: 0.0109 Acc: 0.5009\n",
+      "Begin test......\n",
+      "Test Loss: 0.0104 Acc: 0.5273\n",
+      "Epoch: 18/30 Train Loss: 0.0108 Acc: 0.5022\n",
+      "Begin test......\n",
+      "Test Loss: 0.0101 Acc: 0.5393\n",
+      "Epoch: 19/30 Train Loss: 0.0108 Acc: 0.5019\n",
+      "Begin test......\n",
+      "Test Loss: 0.0101 Acc: 0.5414\n",
+      "Epoch: 20/30 Train Loss: 0.0107 Acc: 0.5036\n",
+      "Begin test......\n",
+      "Test Loss: 0.0101 Acc: 0.5400\n",
+      "Epoch: 21/30 Train Loss: 0.0106 Acc: 0.5131\n",
+      "Begin test......\n",
+      "Test Loss: 0.0100 Acc: 0.5444\n",
+      "Epoch: 22/30 Train Loss: 0.0106 Acc: 0.5147\n",
+      "Begin test......\n",
+      "Test Loss: 0.0099 Acc: 0.5470\n",
+      "Epoch: 23/30 Train Loss: 0.0105 Acc: 0.5159\n",
+      "Begin test......\n",
+      "Test Loss: 0.0099 Acc: 0.5486\n",
+      "Epoch: 24/30 Train Loss: 0.0105 Acc: 0.5162\n",
+      "Begin test......\n",
+      "Test Loss: 0.0098 Acc: 0.5500\n",
+      "Epoch: 25/30 Train Loss: 0.0105 Acc: 0.5164\n",
+      "Begin test......\n",
+      "Test Loss: 0.0100 Acc: 0.5437\n",
+      "Epoch: 26/30 Train Loss: 0.0103 Acc: 0.5254\n",
+      "Begin test......\n",
+      "Test Loss: 0.0097 Acc: 0.5556\n",
+      "Epoch: 27/30 Train Loss: 0.0104 Acc: 0.5218\n",
+      "Begin test......\n",
+      "Test Loss: 0.0099 Acc: 0.5484\n",
+      "Epoch: 28/30 Train Loss: 0.0103 Acc: 0.5236\n",
+      "Begin test......\n",
+      "Test Loss: 0.0098 Acc: 0.5545\n",
+      "Epoch: 29/30 Train Loss: 0.0103 Acc: 0.5281\n",
+      "Begin test......\n",
+      "Test Loss: 0.0097 Acc: 0.5556\n",
+      "Epoch: 30/30 Train Loss: 0.0103 Acc: 0.5222\n",
+      "Begin test......\n",
+      "Test Loss: 0.0097 Acc: 0.5626\n",
+      "Training time: 233.0073745250702 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "training_loss = []\n",
     "training_acc = []\n",
+    "training_f1=[]\n",
     "testing_loss = []\n",
     "testing_acc = []\n",
+    "testing_f1=[]\n",
     "\n",
+    "\n",
+    "train_preds = []\n",
+    "train_targets = []\n",
+    "test_preds = []\n",
+    "test_targets = []\n",
+    "\n",
+    "start_time=time.time()\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    model.train()\n",
     "    torch.cuda.empty_cache()\n",
@@ -319,6 +470,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
+    "        \n",
     "\n",
     "    epoch_loss = running_cls_loss / len(train_set)\n",
     "    epoch_acc = running_cls_corrects.double() / len(train_set)\n",
@@ -327,6 +479,12 @@
     "\n",
     "    training_loss.append(epoch_loss)\n",
     "    training_acc.append(epoch_acc.cpu().detach().numpy())\n",
+    "    \n",
+    "    train_preds.extend(preds.cpu().numpy())\n",
+    "    train_targets.extend(target.cpu().numpy())\n",
+    "    training_f1.append(f1_score(train_targets, train_preds, average='weighted'))\n",
+    "    \n",
+    "  \n",
     "\n",
     "    # change learning rate\n",
     "    scheduler.step()\n",
@@ -354,12 +512,15 @@
     "            \n",
     "            val_loss += loss.item()\n",
     "            val_corrects += torch.sum(preds == target.data)\n",
+    "            test_preds.extend(preds.cpu().numpy())\n",
+    "            test_targets.extend(target.cpu().numpy())\n",
     "\n",
     "        val_loss = val_loss / len(test_set)\n",
     "        val_acc = val_corrects.double() / len(test_set)\n",
     "        print(f'Test Loss: {val_loss:.4f} Acc: {val_acc:.4f}')\n",
     "        testing_loss.append(val_loss)\n",
     "        testing_acc.append(val_acc.cpu().detach().numpy())\n",
+    "        testing_f1.append(f1_score(test_targets, test_preds, average='weighted'))\n",
     "\n",
     "        # save the model in last epoch\n",
     "        if (epoch +1) == NUM_EPOCHS:\n",
@@ -375,7 +536,14 @@
     "                os.makedirs(SAVE_DIR)\n",
     "\n",
     "            # save the state\n",
-    "            torch.save(state, osp.join(SAVE_DIR, 'checkpoint_%s.pth' % (str(epoch+1))))"
+    "            torch.save(state, osp.join(SAVE_DIR, 'checkpoint_%s.pth' % (str(epoch+1))))\n",
+    "\n",
+    "            \n",
+    "end_time = time.time()\n",
+    "training_time = end_time - start_time\n",
+    "         \n",
+    "\n",
+    "print(f\"Training time: {training_time} seconds\")"
    ]
   },
   {
@@ -412,9 +580,9 @@
     "# outputs: predict_label, probabilities\n",
     "# predict_label is the index (or label) of the class with the highest probability from the probabilities.\n",
     "###############################################################\n",
-    "\n",
-    "probabilities = \n",
-    "predict_label = "
+    "input = input.to(device)\n",
+    "probabilities = F.softmax(model(input)[0],dim=0)\n",
+    "predict_label = torch.argmax(probabilities, dim=0)\n"
    ]
   },
   {
@@ -425,7 +593,7 @@
    "source": [
     "predicted_class = class_names[predict_label.item()]\n",
     "predicted_probability = probabilities[predict_label].item()\n",
-    "image = input.numpy().transpose((1, 2, 0))\n",
+    "image = input.cpu().numpy().transpose((1, 2, 0))\n",
     "plt.imshow(image)\n",
     "plt.text(17, 30, f'Predicted Class: {predicted_class}\\nProbability: {predicted_probability:.2f}', \n",
     "            color='white', backgroundcolor='black', fontsize=8)\n",
@@ -436,6 +604,110 @@
     "for i in range(len(class_names)):\n",
     "    print(f'{class_names[i]}: {probabilities[i].item():.4f}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#把testing loss 存到一个文件夹里\n",
+    "with open('test_loss1.txt', 'w') as file:\n",
+    "    for item in testing_loss:\n",
+    "        file.write(str(item) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#把 training loss 存到文件夹里\n",
+    "with open('train_loss1.txt', 'w') as file:\n",
+    "    for item in training_loss:\n",
+    "        file.write(str(item)+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#把 training acc 存到文件夹里\n",
+    "with open('train_acc1.txt', 'w') as file:\n",
+    "    for item in training_acc:\n",
+    "        file.write( str(item) +'\\n' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#把 testing acc 存到文件夹里\n",
+    "with open('test_acc1.txt', 'w') as file:\n",
+    "    for item in testing_acc:\n",
+    "        file.write(str(item) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#是顺的！！！！！！！！！\n",
+    "with open('cost time.txt','a') as file:  \n",
+    "    file.write(str(training_time) +'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#把 testing f1\n",
+    "with open('test_f1_1.txt', 'w') as file:\n",
+    "    for item in testing_f1:\n",
+    "        file.write(str(item) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#把 training f1\n",
+    "with open('train_f1_1.txt', 'w') as file:\n",
+    "    for item in training_f1:\n",
+    "        file.write(str(item) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
