--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -1862,6 +1862,63 @@
     "print('Print probabilities for each class:')\n",
     "[print(f'{class_names[i]}: {probabilities[0, i].item():.4f}') for i in range(len(class_names))]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CLIP "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "\n",
+      "Top predictions:\n",
+      "\n",
+      "             cat: 41.70%\n",
+      "             dog: 21.30%\n",
+      "            ship: 10.22%\n",
+      "            bird: 9.60%\n",
+      "            frog: 4.13%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import clip\n",
+    "import torch\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load('ViT-B/32', device)\n",
+    "\n",
+    "cifar10 = CIFAR10(root=os.path.expanduser(\"~/.cache\"), download=True, train=False) \n",
+    "\n",
+    "image, class_id = cifar10[0]  \n",
+    "image_input = preprocess(image).unsqueeze(0).to(device)\n",
+    "text_inputs = torch.cat([clip.tokenize(f\"a photo of a {c}\") for c in cifar10.classes]).to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    image_features = model.encode_image(image_input)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "\n",
+    "image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "similarity = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
+    "values, indices = similarity[0].topk(5)\n",
+    "\n",
+    "print(\"\\nTop predictions:\\n\")\n",
+    "for value, index in zip(values, indices):\n",
+    "    print(f\"{cifar10.classes[index]:>16s}: {100 * value.item():.2f}%\")"
+   ]
   }
  ],
  "metadata": {
